# NeonCity

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/docker/: app.sh
backend/migrations/: env.py
backend/migrations/versions/: acb6ef3c3656_first.py
backend/src/: app.py  config.py  database.py
backend/src/like_track/: model.py  routers.py  schemas.py  service.py
backend/src/player/: config.py  model.py  routers.py  service.py
backend/src/users/: model.py  routers.py  schemas.py  service.py
front/neon/: Dockerfile  package-lock.json  package.json
front/neon/nginx/: nginx.conf
front/neon/public/: index.html
front/neon/src/: App.js  index.css  index.js
front/neon/src/components/: City.jsx  LikeSound.jsx  Login.jsx  PagesScroll.jsx  Planet.jsx  Register.jsx  Storage.jsx  Track.jsx  Visualizer.jsx  style.css
