[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evin <unslevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pytube = "^15.0.0"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
tinytag = "^1.10.1"
audioread = "^3.0.1"
requests = "^2.31.0"
gunicorn = "^22.0.0"
ffmpeg-python = "^0.2.0"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
